--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="story-section">
-            <p>The Eagle then focused on healing himself. He spent time in solitude, meditating and regaining his strength. He also worked tirelessly on the promise he made for the Dove—be the first one to see his vision. He wanted to show her how much he valued her kindness and light.</p>
+            <p>The Eagle then focused on healing himself. He spent time in solitude, meditating and regaining his strength. He also worked tirelessly on the promise he made for the Dove—to be the first one to see his vision. He wanted to show her how much he valued her kindness and light.</p>
         </div>
 
         <div class="story-section">
@@ -58,8 +58,8 @@
         <div class="story-section" id="question">
             <h2>~ Do you think the Eagle and the Dove can fly together someday? ~</h2>
             <form action="https://formspree.io/f/moqrrpoj" method="POST">
-                <textarea name="answer" placeholder="~ 🥹 ~"></textarea>
-                <button type="submit">Share the Answer</button>
+                <textarea name="answer" placeholder="Share your heart's whisper..."></textarea>
+                <button type="submit">Send Your Message of Hope ✨</button>
             </form>
         </div>
     </div>
