--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         </div>
 
         <div class="story-section">
-            <p>The Eagle wanted the Dove to know the truth: that his heart was free, that he had left the Crow behind, and that the delay in reaching out was because he was working on the promise he made to her. He wanted the Dove to understand that he wasn't just flying aimlessly instead he was flying every day bearing the Dove inside his heart.</p>
+            <p>The Eagle wanted the Dove to know the truth: that his heart was free, that he had left the Crow behind, and that the delay in reaching out was because he was working on the promise he made to her. He wanted the Dove to understand that he wasn't just flying aimlessly; instead, he was flying every day embracing the lovely Dove in the depths of his heart.</p>
         </div>
 
         <div class="story-section">
-            <p>And so, the Eagle shared his story with the Dove, hoping she would see his sincerity and the effort he had put into moving on and creating something meaningful for her. He wanted her to know that his past with the Crow was just that—a past. His heart was now open to a new journey, one he hoped to share with the Dove.</p>
+            <p>And so, the Eagle shared his story with the Dove, hoping she would see the sincerity in his heart and the devotion woven into every step he had taken toward a future meant for her. He wanted her to know that the shadows of the past had faded, leaving only the light of a new journey—one he longed to share with the Beloved Dove of Eternal Love.</p>
         </div>
 
         <div class="story-section" id="question">
