--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
             <p>And so, the Eagle shared his story with the Dove, hoping she would see the sincerity in his heart and the devotion woven into every step he had taken toward a future meant for her. He wanted her to know that the shadows of the past had faded, leaving only the light of a new journey—one he longed to share with the Beloved Dove of Eternal Love.</p>
         </div>
 
+        <div class="story-section">
+            <p class="gift-message">✨ This story is a gift from the Eagle to the lovely Dove—an offering of truth, wrapped in stardust and sealed with hope. May it bring clarity, peace, and a deeper connection, carried on the gentlest winds of the luminous night of the heartfelt confession. May it find its way to your heart and linger in your dreams. ✨</p>
+        </div>
+
         <div class="story-section" id="question">
-            <h2>~ Do you think the Eagle and the Dove can fly together someday? ~</h2>
+            <h2>~ Do you think the Eagle and the Dove can fly together someday? 🥺 ~</h2>
             <form action="https://formspree.io/f/moqrrpoj" method="POST">
                 <textarea name="answer" placeholder="Share your heart's whisper..."></textarea>
                 <button type="submit">Send Your Message of Hope ✨</button>
