--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       gtag('config', 'G-4EYCJ8YRR8');
     </script>
-    <title>Anthem of the Heart:<br>A Tale of Healing and Hope</title>
+    <title>Anthem of the Heart: A Tale of Healing and Hope</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -20,7 +20,7 @@
     <div class="stars"></div>
     <div class="container">
         <div class="story-section" id="title">
-            <h1>Anthem of the Heart: A Tale of Healing and Hope</h1>
+            <h1>Anthem of the Heart:<br>A Tale of Healing and Hope</h1>
             <p class="scroll-hint">Scroll to begin the journey...</p>
         </div>
 
